--- a/MyPersonalProject/src/main/resources/application.properties
+++ b/MyPersonalProject/src/main/resources/application.properties
@@ -4,3 +4,4 @@ jdbc.username = root
 jdbc.password = admin
 hibernate.dialect = org.hibernate.dialect.MySQLDialect
 hibernate.show_sql = true
+hibernate.format_sql = true
